# crowd_reaction_analysis

./: .gitignore  README.md  debug.py  environment.yml  pyproject.toml
configs/: default.yaml  wav2vec2.yaml
configs/ablations/: beats_attributes_only.yaml  beats_event_only.yaml  wav2vec2_attributes_only.yaml  wav2vec2_event_only.yaml
scripts/: api.py  check_data.py  infer.py  results.py  train.py
src/crowd_reaction/: __init__.py  beats.py  data.py  eval.py  model.py
tests/: test_data.py  test_model_and_eval.py
