[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crowd-reaction-analysis"
version = "0.1.0"
description = "Weakly supervised crowd reaction SED with frozen BEATs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "dcase_util>=0.2.20",
  "numpy==1.26.4",
  "pandas==2.2.3",
  "PyYAML==6.0.2",
  "sed_eval>=0.2.1",
  "torch==2.6.0",
  "torchaudio==2.6.0",
  "tqdm==4.67.1",
  "wandb>=0.19.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
